nowrap on type field in table and fix for the bibibliographic data that gets added

--- a/app/styles/header.less
+++ b/app/styles/header.less
@@ -23,13 +23,13 @@ header {
 				width: 100%;
 				display: block;
 				text-transform: uppercase;
-				font-size: 12px;
+				font-size: 16px;
 				@media (min-width: @screen-sm-min) {
-					font-size: 12px;
+					
 				};
 								/* Medium devices (desktops, 992px and up) */
 				@media (min-width: @screen-md-min) {
-					font-size: 12px;
+
 				}
 
 			}
@@ -38,7 +38,7 @@ header {
 				width: 100%;
 				display: block;
 				text-transform: uppercase;
-				font-size: 18px;
+				font-size: 10px;
 			}
 		}
 	}
