--- a/app/styles/not-decided.less
+++ b/app/styles/not-decided.less
@@ -130,8 +130,17 @@ table td {
      hyphens: auto;
 }
 
-table th {
-	&.ordernumber {
-		min-width: 180px;
+table {
+	th {
+		&.ordernumber {
+			min-width: 180px;
+		}
 	}
+
+	td {
+		&.ordertype {
+			white-space: nowrap;
+		}
+	}
+
 }
